force-app/main/default/objects/Quote/fields/Commande__c.field-meta.xml
<CustomField>
    <fullName>Commande__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commande</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Devis</relationshipLabel>
    <relationshipName>Devis</relationshipName>
    <type>Lookup</type>
</CustomField>