force-app/main/default/objects/Quote/fields/Compte__c.field-meta.xml
<CustomField>
    <fullName>Compte__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compte</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Devis</relationshipLabel>
    <relationshipName>Devis</relationshipName>
    <type>Lookup</type>
</CustomField>