force-app/main/default/objects/Quote/fields/Prix_HT__c.field-meta.xml
<CustomField>
    <fullName>Prix_HT__c</fullName>
    <label>Prix HT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>