force-app/main/default/objects/Quote/fields/Prix_TTC__c.field-meta.xml
<CustomField>
    <fullName>Prix_TTC__c</fullName>
    <label>Prix TTC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>